--- a/src/main/webapp/css/createAd.css
+++ b/src/main/webapp/css/createAd.css
@@ -63,7 +63,9 @@ body{
 .category{
     display: inline-block;
     width: 125%;
-    justify-content: center;
+    /*justify-content: center;*/
+    flex-direction: column;
+    justify-content: space-between;
     margin-left: 75px;
     margin-bottom: 10px;
     position: relative;
@@ -77,19 +79,24 @@ body{
     /*background-color: #A2C4E0;*/
     border: 1px solid #1390E0;
     border-radius: 10px;
-    height: 50%;
+    height: 30%;
     /*justify-content: space-evenly;*/
     padding: 25px;
 }
-.category-label {
+/*.category-label {*/
+/*    display: flex;*/
+/*    align-items: center;*/
+/*    !*justify-content: space-between;*!*/
+/*    !*margin-bottom: 60px;*!*/
+/*}*/
+.category-label{
+    /*width: 50%;*/
     display: flex;
     align-items: center;
-    justify-content: space-between;
-    /*margin-bottom: 60px;*/
 }
-input[type=checkbox]{
-    flex: none;
-}
+/*input[type=checkbox]{*/
+/*    flex: none;*/
+/*}*/
 .vl {
     border-left: 1px solid #0D659D;
     height: 50%;
