--- a/src/main/webapp/css/createAd.css
+++ b/src/main/webapp/css/createAd.css
@@ -60,14 +60,14 @@ body{
     right: 350px;
 
 }
-.category{
+#category{
     display: inline-block;
     width: 125%;
     /*justify-content: center;*/
-    flex-direction: column;
-    justify-content: space-between;
+    /*flex-direction: column;*/
+    /*justify-content: space-between;*/
     margin-left: 75px;
-    margin-bottom: 10px;
+    /*margin-bottom: 10px;*/
     position: relative;
     /*border: 1px solid #1390E0;*/
 
@@ -93,6 +93,7 @@ body{
     /*width: 50%;*/
     display: flex;
     align-items: center;
+    justify-content: space-between;
 }
 /*input[type=checkbox]{*/
 /*    flex: none;*/
